--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Page</title>
+    <meta http-equiv="refresh" content="0; url=maintxt.html">
+    <title>Redirecting...</title>
 </head>
 <body>
-    <h1>Welcome to My Site</h1>
-    <p>You can view the content by clicking the link below:</p>
-    <a href="maintxt.html">Go to maintxt.html</a>
+    <p>If you are not redirected automatically, follow this <a href="maintxt.html">link</a>.</p>
 </body>
 </html>
