--- a/maintxt.html
+++ b/maintxt.html
@@ -3,7 +3,7 @@
 <body>
 
 <h1>
-<a href="https://chicken.com">This is a test of the < a > function!</A>
+<a href="https://chicken.com">This is a test of the < a > function!</a>
 </h1>
 <h1>This is an h1 test!</h1>
 <h2>This is an h2 test!</h2>
