--- a/maintxt.html
+++ b/maintxt.html
@@ -39,6 +39,7 @@
  <label for="Random">Write whatever here using the form tool!(dont hit enter it does not have a destination yet.)</label>
  <input type="text" id="Random" name="Random"><br><br>
  </form></h2>
+<h2><a href="https://schoolflashcards.github.io/sfc/pagetraveltest.html">Click here to be traveled to another page within the same website/respotorie!</h2>
 
 </body>
 </html>
