--- a/pagetraveltest.html
+++ b/pagetraveltest.html
@@ -2,4 +2,5 @@
 <html>
   <h2>Hello! This is a test of the traveling pages ability in github pages, clicking the link below will return you to the homepage.</h2>
 <h2><a href="https://schoolflashcards2.github.io/sfc/maintxt.html">Homepage</h2>
+<!--fixercomment-->
 </html>
