--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Redirecting...</title>
 </head>
 <body>
-    <p>If you are not redirected automatically, follow this <a href="maintxt.html">link</a>.</p>
+    <h2>Redirecting...</h2>
+<!--<p>If you are not redirected automatically, follow this <a href="maintxt.html">link</a>.</p>-->
+
 </body>
 </html>
