--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Redirecting...</title>
 </head>
 <body>
-    <h2>Redirecting...</h2>
+    <h2>Loading...</h2>
 <!--<p>If you are not redirected automatically, follow this <a href="maintxt.html">link</a>.</p>-->
 
 </body>
