--- a/t.html
+++ b/t.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
   <p>test!</p>
-<iframe src="https://SchoolFlashCards3.github.io/gamehome/" width="1000" height="600px">
+<iframe src="https://google.com" width="1000" height="600px">
 </iframe>
 </html>
